--- a/assets/style.css
+++ b/assets/style.css
@@ -6,10 +6,10 @@
 header,
 footer {
     width: 100%;
-    height: 120px;
+    height: 170px;
     background-color: rgb(10, 68, 50);
     border: 5px solid rgb(18, 136, 103);
-    box-shadow: 0px 10px #272F2E;
+    box-shadow: 0px 10px 15px 3px #272F2E;
     color: white;
 }
 
@@ -40,23 +40,23 @@ p {
     width: 80%;
     margin: 40px auto;
     border: 10px solid rgb(15, 110, 182);
-    box-shadow: 5px 10px #272F2E;
+    box-shadow: 5px 10px 15px 5px #272F2E;
   }
   .card-css {
     width: 80%;
     margin: 40px auto;
     border: 10px solid rgb(163, 16, 65);
-    box-shadow: 5px 10px #272F2E;
+    box-shadow: 5px 10px 15px 5px #272F2E;
   }
 .card-git {
   width: 80%;
   margin: 40px auto;
   border: 10px solid rgb(88, 8, 100);
-  box-shadow: 5px 10px #272F2E;
+  box-shadow: 5px 10px 15px 5px #272F2E;
 }
 .card-java {
   width: 80%;
   margin: 40px auto;
   border: 10px solid rgb(185, 64, 21);
-  box-shadow: 5px 10px #272F2E;
+  box-shadow: 5px 10px 15px 5px #272F2E;
 }
